@@ -29,6 +29,7 @@ import edu.colorado.phet.buildtools.java.JavaProject;
 import edu.colorado.phet.buildtools.java.projects.BuildToolsProject;
 import edu.colorado.phet.buildtools.java.projects.JavaSimulationProject;
 import edu.colorado.phet.buildtools.java.projects.PhetUpdaterProject;
+import edu.colorado.phet.buildtools.java.projects.SimEventProcessorProject;
 import edu.colorado.phet.buildtools.java.projects.SimSharingProject;
 import edu.colorado.phet.buildtools.java.projects.TimesheetProject;
 import edu.colorado.phet.buildtools.java.projects.TranslationUtilityProject;
@@ -579,6 +580,7 @@ public abstract class PhetProject {
         try {
             projects.add( new TranslationUtilityProject( new File( trunk, BuildToolsPaths.TRANSLATION_UTILITY ) ) );
             projects.add( new SimSharingProject( new File( trunk, BuildToolsPaths.SIM_SHARING ) ) );
+            projects.add( new SimEventProcessorProject( new File( trunk, BuildToolsPaths.SIM_EVENT_PROCESSOR ) ) );
             projects.add( new PhetUpdaterProject( new File( trunk, BuildToolsPaths.PHET_UPDATER ) ) );
             projects.add( new BuildToolsProject( new File( trunk, BuildToolsPaths.BUILD_TOOLS_DIR ) ) );
             projects.add( new TimesheetProject( new File( trunk, BuildToolsPaths.TIMESHEET ) ) );
