@@ -1,7 +1,6 @@
 # Copyright 2002-2011, University of Colorado
 project.depends.data=data
 project.depends.source=src
-project.depends.lib= functional-java
+project.depends.lib= functionaljava : scala-common : jfreechart : phetcommon
 security = all-permissions
-project.flavor.processor.mainclass=edu.colorado.phet.simeventprocessor.Processor
 project.flavor.summarize-data.mainclass=edu.colorado.phet.simeventprocessor.SummarizeData
